@@ -119,43 +119,17 @@
                 </configuration>
             </plugin>
 
-            <!--            <plugin>-->
-            <!--                <groupId>org.openjfx</groupId>-->
-            <!--                <artifactId>javafx-maven-plugin</artifactId>-->
-            <!--                <version>0.0.8</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        &lt;!&ndash; Default configuration for running with: mvn clean javafx:run &ndash;&gt;-->
-            <!--                        <id>default-cli</id>-->
-            <!--                        <configuration>-->
-            <!--                            <mainClass>ch.eitchnet.luminelog/ch.eitchnet.luminelog.LumineLogApplication</mainClass>-->
-            <!--                            <launcher>LumineLog</launcher>-->
-            <!--                            <jlinkZipName>LumineLog-${project.version}</jlinkZipName>-->
-            <!--                            <jlinkImageName>LumineLog</jlinkImageName>-->
-            <!--                            <noManPages>true</noManPages>-->
-            <!--                            <stripDebug>true</stripDebug>-->
-            <!--                            <noHeaderFiles>true</noHeaderFiles>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
-
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
+                        <!-- Default configuration for running with: mvn clean javafx:run -->
+                        <id>default-cli</id>
                         <configuration>
-                            <outputDirectory>
-                                ${project.build.directory}/libs
-                            </outputDirectory>
-                            <!--                            <excludeArtifactIds>jakarta.mail-api,jakarta.mail,javax.mail-api,javax.mail,activation</excludeArtifactIds>-->
-                            <includeScope>compile</includeScope>
+                            <mainClass>${app.main.module}/${app.main.class}</mainClass>
+                            <options>--enable-native-access=javafx.graphics</options>
                         </configuration>
                     </execution>
                 </executions>
